adds kiffel detail view with simple JSON dump (poc)

--- a/frontend/templates/frontend/index.html
+++ b/frontend/templates/frontend/index.html
@@ -41,5 +41,6 @@
     <script src="{% static "frontend/app/controllers/sidenav.js" %}"></script>
     <script src="{% static "frontend/app/controllers/toolbar.js" %}"></script>
     <script src="{% static "frontend/app/controllers/kiffels.js" %}"></script>
+    <script src="{% static "frontend/app/controllers/kiffel.js" %}"></script>
   </body>
 </html>
