--- a/frontend/templates/frontend/index.html
+++ b/frontend/templates/frontend/index.html
@@ -42,5 +42,6 @@
     <script src="{% static "frontend/app/controllers/toolbar.js" %}"></script>
     <script src="{% static "frontend/app/controllers/kiffels.js" %}"></script>
     <script src="{% static "frontend/app/controllers/kiffel.js" %}"></script>
+    <script src="{% static "frontend/app/controllers/anmeldung.js" %}"></script>
   </body>
 </html>
