--- a/frontend/static/frontend/partials/sidenav.html
+++ b/frontend/static/frontend/partials/sidenav.html
@@ -1,6 +1,6 @@
 <div ng-controller="sidenavCtrl" flex class="padding-bottom-1">
 
-  <div class="sidenav-title md-padding">
+  <div class="sidenav-title md-padding blue-light">
     <h2>{{ title }}</h2>
   </div>
 
