--- a/frontend/static/frontend/partials/toolbar.html
+++ b/frontend/static/frontend/partials/toolbar.html
@@ -1,4 +1,4 @@
-<div class="md-toolbar-tools" ng-controller="toolbarCtrl">
+<div class="md-toolbar-tools black" ng-controller="toolbarCtrl">
   <md-button class="md-icon-button" aria-label="Settings" hide-gt-sm ng-click="toggleNav()">
     <ng-md-icon icon="menu"></ng-md-icon>
   </md-button>
@@ -8,6 +8,6 @@
   <span flex></span>
   <span class="hide-sm">
     <span class="font-point9">Angemeldet als <b>{{ user.username }}</b></span>
-    <md-button ng-click="logout()"><ng-md-icon icon="logout"></ng-md-icon> Abmelden</md-button>
+    <md-button ng-click="logout()" class="black"><ng-md-icon icon="logout"></ng-md-icon> Abmelden</md-button>
   </span>
 </div>
