--- a/frontend/templates/frontend/index.html
+++ b/frontend/templates/frontend/index.html
@@ -43,5 +43,8 @@
     <script src="{% static "frontend/app/controllers/kiffels.js" %}"></script>
     <script src="{% static "frontend/app/controllers/kiffel.js" %}"></script>
     <script src="{% static "frontend/app/controllers/anmeldung.js" %}"></script>
+    <script src="{% static "frontend/app/controllers/namensschilder.js" %}"></script>
+    <script src="{% static "frontend/app/controllers/teilnahme.js" %}"></script>
+    <script src="{% static "frontend/app/controllers/hilfe.js" %}"></script>
   </body>
 </html>
