adds help and support notice

--- a/frontend/static/frontend/partials/hilfe.html
+++ b/frontend/static/frontend/partials/hilfe.html
@@ -1,1 +1,3 @@
-Hilfe
+<div flex layout="column" class="center">
+  <h3>Frag' Johannes (jlauinger@d120.de) oder die KIF-Orga² (kif-orga@d120.de)</h3>
+</div>
