--- a/frontend/static/frontend/partials/hilfe.html
+++ b/frontend/static/frontend/partials/hilfe.html
@@ -1,3 +1,3 @@
 <div flex layout="column" class="center">
-  <h3>Frag' Johannes (jlauinger@d120.de) oder die KIF-Orga² (kif-orga@d120.de)</h3>
+  <h3>Frag' Johannes (jlauinger@d120.de) oder die KIF-Orga² (kif-orga@d120.de).</h3>
 </div>
