--- a/frontend/static/frontend/style.css
+++ b/frontend/static/frontend/style.css
@@ -34,6 +34,7 @@
 .margin-left-2-point-5 { margin-left: 2.5rem; }
 
 .width-100 { width: 100%; }
+.width-50 { width: 50%; }
 
 .left { float: left; }
 .right { float: right; }
