adds frontend page for generating signs

--- a/frontend/templates/frontend/index.html
+++ b/frontend/templates/frontend/index.html
@@ -46,5 +46,6 @@
     <script src="{% static "frontend/app/controllers/namensschilder.js" %}"></script>
     <script src="{% static "frontend/app/controllers/teilnahme.js" %}"></script>
     <script src="{% static "frontend/app/controllers/hilfe.js" %}"></script>
+    <script src="{% static "frontend/app/controllers/schilder.js" %}"></script>
   </body>
 </html>
