--- a/frontend/static/frontend/partials/schilder.html
+++ b/frontend/static/frontend/partials/schilder.html
@@ -3,7 +3,14 @@
     <md-card-content>
       <h3>Schilder erstellen</h3>
       <form ng-submit="generate()">
+        <md-radio-group ng-model="template">
+          <md-radio-button value="schilder.tex" class="md-primary">Standard-Design</md-radio-button>
+        </md-radio-group>
         <div>
+          <md-input-container class="margin-0 margin-top-1 width-50">
+            <label>Überschrift</label>
+            <input type="text" ng-model="headline" />
+          </md-input-container>
           <md-input-container class="margin-0 margin-top-1 width-50">
             <label>Text</label>
             <input type="text" ng-model="text" />
