refactors sign generator code path for actual kiffel designs

--- a/frontend/static/frontend/partials/schilder.html
+++ b/frontend/static/frontend/partials/schilder.html
@@ -4,7 +4,7 @@
       <h3>Schilder erstellen</h3>
       <form ng-submit="generate()">
         <md-radio-group ng-model="template">
-          <md-radio-button value="schilder.tex" class="md-primary">Standard-Design</md-radio-button>
+          <md-radio-button value="headline-top_arrowdown_text-right.tex" class="md-primary">Standard-Design</md-radio-button>
         </md-radio-group>
         <div>
           <md-input-container class="margin-0 margin-top-1 width-50">
