adds all options for Schildergenerator

--- a/frontend/static/frontend/partials/schilder.html
+++ b/frontend/static/frontend/partials/schilder.html
@@ -4,7 +4,24 @@
       <h3>Schilder erstellen</h3>
       <form ng-submit="generate()">
         <md-radio-group ng-model="template">
-          <md-radio-button value="headline-top_arrowdown_text-right.tex" class="md-primary">Standard-Design</md-radio-button>
+          <md-radio-button value="headline-top_arrowdown_text-right.tex" class="md-primary">Pfeil nach unten, Text rechts</md-radio-button>
+          <md-radio-button value="headline-top_arrowdownleft_text-right.tex" class="md-primary">Pfeil nach unten links, Text rechts</md-radio-button>
+          <md-radio-button value="headline-top_arrowdownright_text-right.tex" class="md-primary">Pfeil nach unten rechts, Text rechts</md-radio-button>
+          <md-radio-button value="headline-top_arrowleft_image-right.tex" class="md-primary">Pfeil nach links, Bild rechts</md-radio-button>
+          <md-radio-button value="headline-top_arrowleft_text-right.tex" class="md-primary">Pfeil nach links, Text rechts</md-radio-button>
+          <md-radio-button value="headline-top_arrowright_image-right.tex" class="md-primary">Pfeil nach rechts, Bild rechts</md-radio-button>
+          <md-radio-button value="headline-top_arrowright_text-right.tex" class="md-primary">Pfeil nach rechts, Text rechts</md-radio-button>
+          <md-radio-button value="headline-top_arrowup_image-right.tex" class="md-primary">Pfeil nach oben, Bild rechts</md-radio-button>
+          <md-radio-button value="headline-top_arrowup_text-right.tex" class="md-primary">Pfeil nach oben, Text rechts</md-radio-button>
+          <md-radio-button value="headline-top_arrowupleft_text-right.tex" class="md-primary">Pfeil nach oben links, Text rechts</md-radio-button>
+          <md-radio-button value="headline-top_arrowupright_text-right.tex" class="md-primary">Pfeil nach oben rechts, Text rechts</md-radio-button>
+          <md-radio-button value="headline-top_arrowupthenleft_image-right.tex" class="md-primary">Pfeil nach oben links, Bild rechts</md-radio-button>
+          <md-radio-button value="headline-top_arrowupthenleft_text-right.tex" class="md-primary">Pfeil nach oben links, Text rechts</md-radio-button>
+          <md-radio-button value="headline-top_arrowupthenright_image-right.tex" class="md-primary">Pfeil nach oben rechts, Bild rechts</md-radio-button>
+          <md-radio-button value="headline-top_arrowupthenright_text-right.tex" class="md-primary">Pfeil nach oben rechts, Text rechts</md-radio-button>
+          <md-radio-button value="headline-top_image-center.tex" class="md-primary">Bild zentriert</md-radio-button>
+          <md-radio-button value="headline-top_image-left_text-right.tex" class="md-primary">Bild links, Text rechts</md-radio-button>
+          <md-radio-button value="image-left_bothtext-right.tex" class="md-primary">Bild Links, Text rechts, Überschrift rechts</md-radio-button>
         </md-radio-group>
         <div>
           <md-input-container class="margin-0 margin-top-1 width-50">
