adds basic JSON view for eduroam accounts to frontend

--- a/frontend/templates/frontend/index.html
+++ b/frontend/templates/frontend/index.html
@@ -47,5 +47,6 @@
     <script src="{% static "frontend/app/controllers/teilnahme.js" %}"></script>
     <script src="{% static "frontend/app/controllers/hilfe.js" %}"></script>
     <script src="{% static "frontend/app/controllers/schilder.js" %}"></script>
+    <script src="{% static "frontend/app/controllers/eduroam.js" %}"></script>
   </body>
 </html>
