--- a/kiffel/templates/kiffel/import_csv_template.html
+++ b/kiffel/templates/kiffel/import_csv_template.html
@@ -1,6 +1,14 @@
+
+<a href="/api/v1/createanonym/">Anonyme Accounts</a> |
+<a href="/api/v1/import/anmeldung/">Import Anmeldung</a> |
+<a href="/api/v1/import/engelsystem/">Import Engelsystem</a>
+
+<hr>
+
 <form action='' method='post'>
-<textarea name='content'></textarea>
+<textarea name='content' style='width:90%;height:200px;background:#ffeeaa'></textarea>
+
 {% csrf_token %}
-<input type=submit>
+<p><input type=submit></p>
 
 </form>
