--- a/kiffel/templates/kiffel/import_csv_template.html
+++ b/kiffel/templates/kiffel/import_csv_template.html
@@ -1,7 +1,10 @@
 
-<a href="/api/v1/createanonym/">Anonyme Accounts</a> |
-<a href="/api/v1/import/anmeldung/">Import Anmeldung</a> |
-<a href="/api/v1/import/engelsystem/">Import Engelsystem</a>
+ <a href='{% url 'admin:kiffel_person_changelist' %}'>Zurück</a>
+|||
+<a href="{% url 'kiffel:createanonym' %}">Anonyme Accounts</a> |
+<a href="{% url 'kiffel:import_personen' %}">Import Anmeldung</a> |
+<a href="{% url 'kiffel:import_personen_engel' %}">Import Engelsystem</a>
+
 
 <hr>
 
@@ -11,7 +14,7 @@
 <textarea name='content' style='width:90%;height:200px;background:#ffeeaa'></textarea>
 
 {% csrf_token %}
-<p><input type=submit></p>
+<p><input type=submit value='   OK   '></p>
 
 </form>
 
