--- a/oplan/templates/oplan/ak_import_view.html
+++ b/oplan/templates/oplan/ak_import_view.html
@@ -1,10 +1,5 @@
-AK-Planungsmodul
+{% include 'oplan/header.html' %}
 
-<hr>
-
-<h2>{{ titel }}</h2>
-
-<hr>
 
 <form action='' method='post'>
 <textarea name='content' style='width:90%;height:200px;background:#ffeeaa'></textarea>
