--- a/oplan/templates/admin/oplan/ak/change_list.html
+++ b/oplan/templates/admin/oplan/ak/change_list.html
@@ -1,4 +1,10 @@
 {% extends "admin/change_list.html" %}
+
+{% block breadcrumbs %}
+    {% include "oplan/menu.html" %}
+    {{ block.super }}
+{% endblock %}
+
 {% block object-tools-items %}
 
     <li>
