mehr schniekes design

--- a/oplan/templates/oplan/header.html
+++ b/oplan/templates/oplan/header.html
@@ -7,8 +7,7 @@
 <script src="{% static 'oplan/vendor/moment/moment.js' %}"></script>
 <script src="{% static 'oplan/vendor/fullcalendar/dist/fullcalendar.js' %}"></script>
 <link rel=stylesheet href="{% static 'oplan/vendor/fullcalendar/dist/fullcalendar.css' %}">
-<style> html,body{margin:0;padding:0;font-family:Helvetica,sans-serif;font-size:10pt;}
-#contents { padding:10px; } </style>
+<link rel=stylesheet href="{% static 'admin/css/base.css' %}">
 
 {% include "oplan/menu.html" %}
-<div id=contents>
+<div id=content>
