--- a/kiffel/templates/kiffel/import_csv_template.html
+++ b/kiffel/templates/kiffel/import_csv_template.html
@@ -1,14 +1,6 @@
-
- <a href='{% url 'admin:kiffel_person_changelist' %}'>Zurück</a>
-|||
-<a href="{% url 'kiffel:createanonym' %}">Anonyme Accounts</a> |
-<a href="{% url 'kiffel:import_personen' %}">Import Anmeldung</a> |
-<a href="{% url 'kiffel:import_personen_engel' %}">Import Engelsystem</a>
+{% include 'kiffel/header.html' %}
 
 
-<hr>
-
-<h2>{{ titel }}</h2>
 
 <form action='' method='post'>
 <textarea name='content' style='width:90%;height:200px;background:#ffeeaa'></textarea>
