oplan monster-commit

--- a/oplan/templates/admin/oplan/room/change_list.html
+++ b/oplan/templates/admin/oplan/room/change_list.html
@@ -10,6 +10,9 @@
     <li>
         <a href="{% url 'oplan:import_room_list' %}" class="grp-state-focus" class="addlink">Aus Liste importieren</a>
     </li>
+    <li>
+        <a href="{% url 'oplan:import_room_dekrr' %}" class="grp-state-focus" class="addlink">Aus DEKRR importieren</a>
+    </li>
 
     {{ block.super }}
 
