--- a/oplan/templates/oplan/ak_import_view.html
+++ b/oplan/templates/oplan/ak_import_view.html
@@ -2,7 +2,7 @@
 
 
 <form action='' method='post'>
-<textarea name='content' style='width:90%;height:200px;background:#ffeeaa'></textarea>
+<textarea name='content' style='width:90%;height:200px;background:#ffeeaa'>{{ content|default:'' }}</textarea>
 
 {% csrf_token %}
 <p><input type=submit></p>
