--- a/oplan/templates/oplan/akwallcalendar.html
+++ b/oplan/templates/oplan/akwallcalendar.html
@@ -39,7 +39,7 @@ $(document).ready(function() {
     // page is now ready, initialize the calendar...
 
     $('#calendar').fullCalendar(calendarDefaultOptions({
-        defaultView: localStorage.calendarAkView ? localStorage.calendarAkView : 'timelineWeek',
+        defaultView: localStorage.calendarAkView ? localStorage.calendarAkView : 'timelineDay',
         header: {
             left:   'timelineWeek,agendaDay,timelineDay',
             center: 'title',
