--- a/oplan/templates/oplan/menu.html
+++ b/oplan/templates/oplan/menu.html
@@ -10,7 +10,7 @@
 | <a href="{% url 'oplan:infoscreen' %}">Dashboard</a>
 | <a href="{% url 'admin:oplan_room_changelist' %}" id="raumliste_lnk">Raumliste</a>
 | <a href="{% url 'admin:oplan_ak_changelist' %}">AK-Liste</a>
-| <a href="{% url 'oplan:darwin_status' %}">Darwin-Status</a>
+| <a href="{% url 'admin:app_list' 'oplan' %}">Administration</a>
 |
 </div>
 <h2>{{titel|default:"AK-Planungsmodul"}}</h2>
