--- a/oplan/templates/oplan/menu.html
+++ b/oplan/templates/oplan/menu.html
@@ -10,7 +10,13 @@
 | <a href="{% url 'oplan:infoscreen' %}">Dashboard</a>
 | <a href="{% url 'admin:oplan_room_changelist' %}" id="raumliste_lnk">Raumliste</a>
 | <a href="{% url 'admin:oplan_ak_changelist' %}">AK-Liste</a>
-| <a href="{% url 'admin:app_list' 'oplan' %}">Administration</a>
+|{% if user.is_authenticated %}
+<a href="{% url 'admin:app_list' 'oplan' %}">Administration</a> |
+    Hi {{ user.nickname }} | <a href="{% url 'mysite_logout' %}">Log Out</a>
+{% else %}
+    <a href="{% url 'mysite_login' %}">Log In</a>
+{% endif %}
+
 |
 </div>
 <h2>{{titel|default:"AK-Planungsmodul"}}</h2>
