weniger angular, mehr plain old html

--- a/oplan/templates/oplan/menu.html
+++ b/oplan/templates/oplan/menu.html
@@ -6,6 +6,7 @@
 
 <div id="mainMenu">
 <div style="float:right">
+| <a href="/">Home</a>
 | <a href="{% url 'oplan:ak_wall' %}">AK-Wall</a>
 | <a href="{% url 'oplan:infoscreen' %}">Dashboard</a>
 | <a href="{% url 'admin:oplan_room_changelist' %}" id="raumliste_lnk">Raumliste</a>
