--- a/frontend/templates/frontend/index.html
+++ b/frontend/templates/frontend/index.html
@@ -1,52 +1,13 @@
-{% load staticfiles %}
-
-<!doctype html>
-<html lang="de">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-    <title>Kiffel Verwaltung</title>
-
-    <link rel="stylesheet" href="{% static "frontend/vendor/angular-material/angular-material.css" %}" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
-    <link rel="stylesheet" href="{% static "frontend/style.css" %}" />
-  </head>
-
-  <body ng-app="kiffel" layout="row" ng-cloak>
-
-    <md-sidenav class="md-sidenav-left md-whiteframe-z2 bg-green" md-component-id="nav" md-is-locked-open="$mdMedia('gt-md')" ng-if="user.authenticated" ng-include src="'{% static "frontend/partials/sidenav.html" %}'"></md-sidenav>
-
-    <div layout="column" flex>
-      <md-toolbar ng-if="user.authenticated" ng-include src="'{% static "frontend/partials/toolbar.html" %}'" class="md-whiteframe-z1"></md-toolbar>
-      <md-content layout="column" flex class="md-padding" ng-view></md-content>
-    </div>
-
-    <script src="{% static "frontend/vendor/angular/angular.min.js" %}"></script>
-    <script src="{% static "frontend/vendor/angular-route/angular-route.min.js" %}"></script>
-    <script src="{% static "frontend/vendor/restangular/dist/restangular.min.js" %}"></script>
-    <script src="{% static "frontend/vendor/angular-aria/angular-aria.min.js" %}"></script>
-    <script src="{% static "frontend/vendor/angular-animate/angular-animate.min.js" %}"></script>
-    <script src="{% static "frontend/vendor/angular-material/angular-material.min.js" %}"></script>
-    <script src="{% static "frontend/vendor/angular-material-icons/angular-material-icons.min.js" %}"></script>
-    <script src="{% static "frontend/vendor/underscore/underscore-min.js" %}"></script>
-    <script src="{% static "frontend/vendor/angular-underscore/angular-underscore.min.js" %}"></script>
-
-    <script src="{% static "frontend/app/app.js" %}"></script>
-    <script src="{% static "frontend/app/routes.js" %}"></script>
-    <script src="{% static "frontend/app/services/auth.js" %}"></script>
-    <script src="{% static "frontend/app/services/apiInterceptor.js" %}"></script>
-    <script src="{% static "frontend/app/services/toolbar.js" %}"></script>
-    <script src="{% static "frontend/app/controllers/login.js" %}"></script>
-    <script src="{% static "frontend/app/controllers/sidenav.js" %}"></script>
-    <script src="{% static "frontend/app/controllers/toolbar.js" %}"></script>
-    <script src="{% static "frontend/app/controllers/kiffels.js" %}"></script>
-    <script src="{% static "frontend/app/controllers/kiffel.js" %}"></script>
-    <script src="{% static "frontend/app/controllers/anmeldung.js" %}"></script>
-    <script src="{% static "frontend/app/controllers/namensschilder.js" %}"></script>
-    <script src="{% static "frontend/app/controllers/teilnahme.js" %}"></script>
-    <script src="{% static "frontend/app/controllers/hilfe.js" %}"></script>
-    <script src="{% static "frontend/app/controllers/schilder.js" %}"></script>
-    <script src="{% static "frontend/app/controllers/eduroam.js" %}"></script>
-  </body>
-</html>
+{% with titel="KIF Verwaltung" %}
+{% include "oplan/header.html" %}
+{% endwith %}
+<ul>
+<li><a href="{% url 'oplan:ak_wall' %}">AK-Wall (Kalender)</a></li>
+<li><a href="{% url 'admin:kiffel_person_changelist' %}">Infopoint: Anmeldung  </a></li>
+<li><a href="{% url 'admin:eduroam_guestaccount_changelist' %}">Infopoint: eduroam-Gastaccounts  </a></li>
+<li><a href="https://caroline.d120.de/schilder/">Schildergenerator  </a></li>
+<li><a href="https://www2.fachschaft.informatik.tu-darmstadt.de/engelsystem/">Engelsystem  </a></li>
+<li><a href="https://www2.fachschaft.informatik.tu-darmstadt.de/pad/">Pad Manager  </a></li>
+<li><a href="https://orga.fachschaften.org/projects/kif-orga-440/issues">Orga-Wiki  </a></li>
+<li><a href="https://www.fachschaft.informatik.tu-darmstadt.de/">d120.de </a></li>
+</ul>
