--- a/oplan/templates/oplan/infoscreen.html
+++ b/oplan/templates/oplan/infoscreen.html
@@ -1,4 +1,10 @@
-{% include 'oplan/header.html' %}
+{% extends 'oplan/header.html' %}
+{% block breadcrumbs %}
+{%endblock %}
+
+
+{% block content %}
+
 <meta name="viewport" content="width=device-width">
 
 <div class="dashbox">
@@ -60,3 +66,4 @@ body{background:black;color:#ccc;}
 }
 
 </style>
+{%endblock %}
