--- a/oplan/templates/oplan/login.html
+++ b/oplan/templates/oplan/login.html
@@ -1,5 +1,5 @@
-{% include 'oplan/header.html' %}
-
+{% extends 'oplan/header.html' %}
+{% block content %}
 
 {% if form.errors %}
 <p>Your username and password didn't match. Please try again.</p>
@@ -31,4 +31,4 @@
 <input type="hidden" name="next" value="{{ next }}" />
 </form>
 
-
+{% endblock %}
