--- a/oplan/templates/oplan/roomcalendar.html
+++ b/oplan/templates/oplan/roomcalendar.html
@@ -1,4 +1,5 @@
-{% include 'oplan/header.html' %}
+{% extends 'oplan/header.html' %}
+{% block content %}
 <div id="oplan">
 
     <div class="toolbar">
@@ -84,3 +85,4 @@ $(document).ready(function() {
 });
 </script>
 
+{% endblock %}
