--- a/frontend/templates/frontend/index.html
+++ b/frontend/templates/frontend/index.html
@@ -9,6 +9,7 @@
 <ul>
 <li><a href="{% url 'oplan:ak_wall' %}">AK-Wall (Kalender)</a></li>
 <li><a href="{% url 'admin:kiffel_person_changelist' %}">Infopoint: Anmeldung  </a></li>
+<li><a href="{% url 'kiffel:mobi' %}">Infopoint: mobile Anmeldung  </a></li>
 <li><a href="{% url 'admin:eduroam_guestaccount_changelist' %}">Infopoint: eduroam-Gastaccounts  </a></li>
 <li><a href="https://caroline.d120.de/schilder/">Schildergenerator  </a></li>
 <li><a href="https://www2.fachschaft.informatik.tu-darmstadt.de/engelsystem/">Engelsystem  </a></li>
