--- a/kiffel/templates/kiffel/import_csv_template.html
+++ b/kiffel/templates/kiffel/import_csv_template.html
@@ -1,6 +1,21 @@
-{% include 'kiffel/header.html' %}
+{% extends 'admin/base_site.html' %}
+
+{% block breadcrumbs %}
+<div class="breadcrumbs">
+ <a href='{% url "admin:kiffel_person_changelist" %}'>Zurück</a>
+|||
+<a href='{% url "kiffel:createanonym" %}'>Anonyme Accounts</a> |
+<a href='{% url "kiffel:import_personen" %}'>Import Anmeldung</a> |
+<a href='{% url "kiffel:import_personen_engel" %}'>Import Engelsystem</a>
+</div>
+{% endblock %}
+
+{%block content_title%}
+{% endblock %}
 
 
+
+{% block content %}
 
 <form action='' method='post'>
 <textarea name='content' style='width:90%;height:200px;background:#ffeeaa'>{{content|default:''}}</textarea>
@@ -16,4 +31,4 @@
 {% endautoescape %}
 
 </pre>
-
+{% endblock %}
